fixed placeholders and heading -subheading alignment

--- a/assets/icon-with-text.css
+++ b/assets/icon-with-text.css
@@ -3,13 +3,17 @@
   padding: 0;
 }
 
+:root {
+  --heading-padding: 0 40px;
+}
+
 .icon-with-text-container {
   background: var(--color-background);
   display: flex;
   overflow-x: scroll;
   gap: 5rem;
   scrollbar-width: none;
-  padding: 0 40px;
+  padding: var(--heading-padding);
   scroll-snap-type: x mandatory;
 }
 
@@ -147,6 +151,10 @@
   color: rgb(var(--color-secondary-button-text));
 }
 @media only screen and (max-width: 990px) {
+  :root {
+    --heading-padding: 0 26px;
+  }
+
   .icon-with-text-container {
     scroll-snap-type: x mandatory;
     justify-content: normal;
